--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/order_system  # 도커 컨테이너 이름 mysql
-    username: order
+    url: jdbc:mysql://localhost:3306/order  # 도커 컨테이너 이름 mysql
+    username: minuooooo
     password: 1234
 
   data:
@@ -19,10 +19,10 @@ spring:
   #    check-location: false  # 마이그레이션 스크립트 실행 전 체크 여부
   #    baseline-on-migration: true  # 스키마 초기화 여부
 
-  sql:
-    init:
-      mode: always
-      data-locations: classpath:sql/data.sql  # *.sql 경로
+#  sql:
+#    init:
+#      mode: always
+#      data-locations: classpath:sql/data.sql  # *.sql 경로
 
   jpa:
     open-in-view: false
@@ -36,7 +36,7 @@ spring:
           physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     database: mysql
     database-platform: org.hibernate.dialect.MySQL8Dialect
-    defer-datasource-initialization: true  # Hibernate 의 초기 엔티티 생성 이후 *.sql 실행
+#    defer-datasource-initialization: true  # Hibernate 의 초기 엔티티 생성 이후 *.sql 실행
 
 logging:
   level:
