--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/order  # 도커 컨테이너 이름 mysql
+    url: jdbc:mysql://localhost:3306/order
     username: minuooooo
     password: 1234
 
