--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,7 +40,7 @@ jwt:
   secret: ${jwt.secret-key}
 
 springdoc:
-  packages-to-scan : jpabook.jpashop
+  packages-to-scan : order.system
   swagger-ui :
     path : /api
   api-docs :
